--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "part4/bloglist"]
 	path = part4/bloglist
 	url = git@github.com:VANHUUTHANHTRUNG/bloglist.git
+[submodule "part5/bloglist-frontend"]
+	path = part5/bloglist-frontend
+	url = git@github.com:VANHUUTHANHTRUNG/bloglist-frontend.git
