--- a/part7/extending-bloglist/frontend/package.json
+++ b/part7/extending-bloglist/frontend/package.json
@@ -47,6 +47,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "cypress": "^8.0.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-jest": "^24.4.0",
     "redux-devtools-extension": "^2.13.9"
