--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "apollo-server": "^3.1.2",
     "graphql": "^15.5.1",
+    "mongoose": "^5.13.7",
+    "mongoose-unique-validator": "^2.0.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
