--- a/part9/patientor/backend/package.json
+++ b/part9/patientor/backend/package.json
@@ -1,11 +1,11 @@
 {
   "name": "flight_diary",
   "version": "1.0.0",
-  "description": "Ilari's flight diary TS applicaiton",
+  "description": "patientor application",
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "dev": "ts-node-dev ./src/index.ts",
+    "dev": "ts-node-dev --respawn src/index.ts",
     "lint": "eslint --ext .ts .",
     "start": "node ./build/index.js"
   },
@@ -20,6 +20,10 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/cors": "^2.8.12",
+    "@types/uuid": "^8.3.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   }
 }
